--- a/wl/security/src/main/resources/securityDefault.properties
+++ b/wl/security/src/main/resources/securityDefault.properties
@@ -12,6 +12,8 @@ security.logout=/logout
 security.isLogin=/isLogin
 #获取用户名的接口url
 security.getUsername=/getUsername
+#获取用户详细信息
+security.getUserInfo=/getUserInfo
 #判断当前用户是否是指定角色的接口url
 security.isTargetRole=/isTargetRole
 #获取用户角色列表的接口url
@@ -46,3 +48,4 @@ security.accept.role_sys=/**
 security.accept.role_admin=/**
 #普通用户允许通行的url
 security.accept.role_user=/user/**,/pages/**,/css/**,/img/**,/plugins/**,/js/**
+
